[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/FX/Particles.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Items/Opalescence.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/FX/pointLight.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/Entities/Enemies/blocker.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Items/OpalescenceProjectile.gd" type="Script" id=5]
[ext_resource path="res://Resources/Audio/FX/EnemyExplosion3.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=7]
[ext_resource path="res://Resources/Audio/FX/Laser1 (1).wav" type="AudioStream" id=8]

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.151351, 0.805405, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 139.04
angular_velocity = 34.88
orbit_velocity = 0.0
orbit_velocity_random = 0.71
radial_accel = 100.0
damping = 59.8
angle = 536.5
angle_random = 1.0
scale = 5.0
scale_random = 0.27
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 13.0
height = 12.0

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
lifetime_randomness = 0.81
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 833.33
initial_velocity_random = 0.21
orbit_velocity = 0.3
orbit_velocity_random = 0.0
linear_accel = 50.98
radial_accel = 86.27
damping = 87.02
scale = 10.0
scale_curve = SubResource( 13 )

[node name="OpalescenceProjectile" type="Node2D"]
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 3
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
material = SubResource( 6 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.85098, 0.85098, 0.85098, 1 )
material = SubResource( 6 )
rotation = 0.392699
scale = Vector2( 0.2, 0.2 )
z_index = -1
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="KinematicBody2D"]
material = SubResource( 7 )
position = Vector2( -3.8147e-06, 0 )
scale = Vector2( 0.560976, 0.487805 )
amount = 100
speed_scale = 1.57
randomness = 1.0
local_coords = false
process_material = SubResource( 15 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( -1, 0 )
shape = SubResource( 11 )

[node name="OuterLight" type="Light2D" parent="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
energy = 3.0
shadow_enabled = true

[node name="InnerLight" type="Light2D" parent="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
energy = 3.0
shadow_enabled = true

[node name="Particles2D2" type="Particles2D" parent="KinematicBody2D"]
visible = false
emitting = false
amount = 200
lifetime = 3.0
explosiveness = 0.94
process_material = SubResource( 14 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 6 )
pitch_scale = 1.13
script = ExtResource( 7 )
default_vol = 2.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 8 )
pitch_scale = 1.6
script = ExtResource( 7 )
default_vol = -12.0

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="KinematicBody2D/Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
